# ThesisFL

./: results_log.txt
Codingan DNN/: DNN Dataset 10% SMOTE.ipynb  DNN Dataset 10%(minmaxscaler).ipynb  DNN Dataset 10%(stdscaler).ipynb  DNN Dataset MMSPCA.ipynb  DNN Dataset SCPCA.ipynb
Codingan DNN/New DNN/: DNN dataset 10% IID IPCA.ipynb  DNN dataset 10% IID.ipynb  (+3 more)
EDA dan DNN/: DNN Dataset 10%.ipynb  EDA CICIOT2023 (10%).ipynb
Exploratory Data Analysis/: Pembagian Dataset non-IID.ipynb
FL DNN Versi Lama/: client.py  server.py
Hasil/: results FedAVG 50% (STDSC).txt  results FedAVG 50% (STDSCPCA).txt  results FedProx 0.1 50% (MMS).txt  results FedProx 0.1 50% (STDSC).txt
Hasil Baru/: new results index acak FedProx 2.0.txt  new results non-iid FedAvg.txt  new results non-iid FedProx 0.1.txt  new results non-iid FedProx 2.0.txt
Hasil FL/: results FedAVG 50% (MMS).txt  results FedProx 0.1 50% (MMSPCA).txt
Simulasi Pembagian dan Pengacakan Data/: IID.py  non-IID.py
percobaan/: README.md  pyproject.toml  requirements.txt
percobaan/percobaan/: __init__.py  client_app.py  server_app.py  task.py
thesisfl/: README.md  pyproject.toml  requirements.txt  setup.py
thesisfl/Codingan Skema Task.py/Feature Selection Dataset/: iidfeatureselection.py  noniidfeatureselection.py
thesisfl/Codingan Skema Task.py/IPCA Dataset/: iidIPCA.py  noniidIPCA.py
thesisfl/Codingan Skema Task.py/Normal Dataset/: iidnormal.py  noniidnormal.py
thesisfl/Codingan Skema Task.py/Percobaan/: percobaan.py
thesisfl/thesisfl/: __init__.py  client_app (non-iid).py  client_app.py  newtask(IID).py  percobaantask.py  server_app (non-iid).py  server_app.py  simulasiIID.py  task(non-iid).py  task.py
(+60 files in other folders)
