[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thesisfl"
version = "1.0.0"
description = "Thesis Federated Learning CIDS"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "tensorflow>=2.11.1",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.2",
    "matplotlib>=3.4.3"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "satriawh"

[tool.flwr.app.components]
serverapp = "thesisfl.server_app:app"
clientapp = "thesisfl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
local-epochs = 1
batch-size = 32
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
